part1/Exercise1.10/LogOutput/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: shared-file
          emptyDir: {}
      containers:
        - name: logoutput-reader
          image: swikrititripathi/hash-reader
          volumeMounts:
            - name: shared-file
              mountPath: /usr/src/app/files
        - name: logoutput-generator
          image: swikrititripathi/hash-generator
          volumeMounts:
            - name: shared-file
              mountPath: /usr/src/app/files
